released yet, what did you expect? ;-)

Notice. I haven't changed the loaders yet, so returning 0 won't do squat
until tomorrow, when I change them all. What they will do is clean up and
return what they've got so far. If anyone who wrote a loader wants to do
their own, cool, it'll save me learning the api of every damn image lib ;-)
It's just a case of swapping 
progress(params, ...);
with
if(!progress(params, ...)
  cleanup_some_stuff_and_return_what_there_is();
Otherwise, I'll do it myself tomorrow.

_______________________________________________

Wed Apr 26 19:58:05 PDT 2000
(KainX)

If progress() returns 0, clip the last row and
return 2.

_______________________________________________

Thu Apr 27 04:00:28 GMT 2000
(gilbertt)

All done except the tiff loader. This one is gonna be hard. Libtiff is quite
broken in many ways ;-)

_______________________________________________

Thu Apr 27 04:22:06 GMT 2000
(gilbertt)

Return 2 from interrupted loaders.

_______________________________________________

Thu Apr 27 13:41:11 GMT 2000
(gilbertt)

Free up some RAM and close the filehandle when interrupted.

_______________________________________________

Thu Apr 27 13:43:49 GMT 2000
(gilbertt)

Actually, made the gif loader give back what it's got without changing im->h
to reflect, or reallocing the image data. The reason for this is that it
already told apps what the image size was in the first progressive loader
callback, and changing it afterwards can cause confusion. Also, an app can
still handle/display a half-loaded image, as the rest is just filled black,
and the programmer knows how much of the image he got, 'cos he interrupted
it from the callback. If the programmer wants to trim the image, he knows
where to trim it, but if he/she wants to display a part-loaded image,
that'll work sanely.

I think this is more sane behaviour, having tested it in feh and
imlib2_view, but feel free to disagree ;-)
