@@ -31,6 +31,11 @@ __imlib_CreatePixmapsForImage(Display *d, Drawable w, Visual *v, int depth,
 	   *p = ip->pixmap;
 	if (m)
 	   *m = ip->mask;
+        ip->references++;
+#ifdef DEBUG_CACHE
+        fprintf(stderr, "[Imlib2]  Match found in cache.  Reference count is %d, pixmap 0x%08x, mask 0x%08x\n",
+               ip->references, ip->pixmap, ip->mask);
+#endif
 	return 2;
      }
    if (p)
@@ -71,6 +76,10 @@ __imlib_CreatePixmapsForImage(Display *d, Drawable w, Visual *v, int depth,
    ip->pixmap = pmap;
    ip->mask = mask;
    __imlib_AddImagePixmapToCache(ip);
+#ifdef DEBUG_CACHE
+   fprintf(stderr, "[Imlib2]  Created pixmap.  Reference count is %d, pixmap 0x%08x, mask 0x%08x\n",
+          ip->references, ip->pixmap, ip->mask);
+#endif
    return 1;
 }
 
